# limbo

./: Cargo.toml  LICENSE  README.md  limbo.toml
.github/workflows/: rust.yml
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/src/fields/: int.rs  mod.rs  string.rs  varint.rs
crates/protocol/src/packet/: mod.rs
crates/protocol/src/packet/client/: handshake.rs  mod.rs  status.rs
crates/protocol/src/packet/server/: mod.rs  status.rs
crates/protocol_derive/: Cargo.toml
crates/protocol_derive/src/: lib.rs
crates/server_list/: Cargo.toml
crates/server_list/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: chat.rs  info.rs  io.rs  lib.rs  metadata.rs  player_info.rs  types.rs  variable.rs
protocol/src/packets/: mod.rs
protocol/src/packets/client/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
protocol/src/packets/server/: login.rs  mod.rs  play.rs  status.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  connection.rs  dimension.nbt  dimension_codec.nbt  logging.rs  main.rs  mojang.rs  shutdown.rs
src/: connection.rs  main.rs
src/protocol/: info.rs  io.rs  mod.rs  variable.rs
src/protocol/packets/: mod.rs
src/protocol/packets/client/: handshake.rs  mod.rs
src/protocol/packets/server/: mod.rs  status.rs
