[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
tokio = { version = "1.15.0", features = ["full"] }
protocol = { path = "../protocol" }
bytes = "1.1.0"
thiserror = "1.0.30"
log = { version = "0.4.14", features = ["serde"] }
fern = { version = "0.6.0", features = ["colored"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.132", features = ["derive"] }
toml = "0.5.8"
console-subscriber = { version = "0.1.0", optional = true }
flate2 = { version = "1.0.22", features = ["zlib"], default-features = false }

[features]
console = ["console-subscriber", "tokio/tracing"]
