[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.1", features = ["full"] }
protocol = { path = "../protocol" }
bytes = "1.4.0"
thiserror = "1.0.40"
log = { version = "0.4.17", features = ["serde"] }
fern = { version = "0.6.2", features = ["colored"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
console-subscriber = { version = "0.1.9", optional = true }
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }
rsa = "0.5.0"
rsa-der = "0.3.0"
once_cell = "1.17.1"
rand = "0.8.5"
aes = "0.7.5"
cfb8 = "0.7.1"
sha1 = "0.10.5"
num-bigint = "0.4.3"
ureq = { version = "2.6.2", features = ["json"] }

[features]
console = ["console-subscriber", "tokio/tracing"]
